# HEROVision

./: CMakeLists.txt
header/: RMVideoCapture.hpp  anglesolver.h  armorfinder.h  armorpreprocessor.h  camera.h  contoursfinder.h  kalmanfilter.h  meassagesender.h  messagereader.h  predictor.h  serial.h  serialport.h  stereosolver.h  targetselector.h  timer.h  worker.h  workspace.h
param/: armor_param.xml  other_param.xml  solver_param.xml
src/: RMVideoCapture.cpp  anglesolver.cpp  armorfinder.cpp  armorpreprocessor.cpp  camera.cpp  contoursfinder.cpp  kalmanfilter.cpp  main.cpp  meassagesender.cpp  messagereader.cpp  predictor.cpp  serial.cpp  serialport.cpp  stereosolver.cpp  targetselector.cpp  timer.cpp  worker.cpp  workspace.cpp
